{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "PlayerMouse",
            "id": "e5ade5e4-0da4-4dd4-9433-0288cc58df12",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "009be71f-ea6d-4c89-b409-a6bcbd52566d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0b90d4da-ae5c-4a1e-98e0-b0c1ea8a4dbc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}